--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",   
+    "seed:questions": "node seed/seedQuestions.js"
+
+
   },
   "keywords": [],
   "author": "",
