--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,16 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",   
+    "dev": "nodemon server.js",
     "seed:questions": "node seed/seedQuestions.js"
-
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
